--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="mobile-nav">
-        <div class="mobile-logo">BOBO250 Electronics Shop</div>
+        <div class="mobile-logo"><img src="images/bobo LOGO.png" style="height: 50px; width: 50px;" alt="LOGO">BOBO250 Electronics Shop</div>
         <div class="hamburger">
             <span></span>
             <span></span>
