--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
             <div class="product-details">
                 <h3>iPhone 12</h3>
-                <div class="price">450,000 frw <span class="original-price">$1,299</span></div>
+                <div class="price">450,000 frw <span class="original-price">500,000FRW</span></div>
                 <div class="product-actions">
                     <button class="buy-now">Buy Now</button>
                 </div>
@@ -154,7 +154,7 @@
             </div>
             <div class="product-details">
                 <h3>ROLEX WOMEN WATCH</h3>
-                <div class="price">25,000 FRW<span class="original-price">$299</span></div>
+                <div class="price">25,000 FRW<span class="original-price">40,000 FRW</span></div>
                 <div class="product-actions">
                     <button class="buy-now">Buy Now</button>
                 </div>
